discussion/kv_engine/153754/153754_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP magma: Add support for group commit

Add new config parameter magma_group_commit_quota.
Units are bytes.
I think Rocks uses 1MB.

Change-Id: I5f3c480b0e4787c8b2bbae79ade2c3db87f805fe

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2021-05-17 23:11:06.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-17 23:38:09.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10532/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8979/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:470:28: error: no member named "GroupCommitQuota" in "magma::Magma::Config" [clang-diagnostic-error]
    configuration.magmaCfg.GroupCommitQuota =
                           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8979/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:470:28:
error: no member named "GroupCommitQuota" in "magma::Magma::Config" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8979/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35833/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(470): error C2039: "GroupCommitQuota": is not a member of "magma::Magma::Config" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35833/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30634/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:470:28:
error: no member named "GroupCommitQuota" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30634/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9601/ : FAILURE

Compile error at [2021-05-17T23:14:20.321Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:470:28:
error: no member named "GroupCommitQuota" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9601/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10932/ : FAILURE

Compile error at [2021-05-17T23:15:23.176Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:470:28:
error: no member named "GroupCommitQuota" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10932/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10673/ : FAILURE

Compile error at [2021-05-17T23:37:09.753Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:470:28:
error: ?struct magma::Magma::Config? has no member named ?GroupCommitQuota?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10673/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18483/ : FAILURE

Compile error at [2021-05-17T23:13:58.664Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:470:28:
error: no member named "GroupCommitQuota" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18483/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7531/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
